lib/src/linux.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:custom_window/linux')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>()
external void cw_gtk_window_remove_decorations(
  ffi.Pointer<ffi.Void> gtk_window,
  ffi.Pointer<ffi.Void> fl_view,
);

@ffi.Native<ffi.Void Function()>()
external void cw_init_event_hooks_if_needed();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int)>()
external void cw_window_begin_move_drag(
  ffi.Pointer<ffi.Void> gtk_window,
  int x,
  int y,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.UnsignedInt, ffi.Int, ffi.Int)
>(symbol: 'cw_window_begin_resize_drag')
external void _cw_window_begin_resize_drag(
  ffi.Pointer<ffi.Void> gtk_window,
  int edge,
  int x,
  int y,
);

void cw_window_begin_resize_drag(
  ffi.Pointer<ffi.Void> gtk_window,
  cw_window_edge_t edge,
  int x,
  int y,
) => _cw_window_begin_resize_drag(
  gtk_window,
  edge.value,
  x,
  y,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int, ffi.Int, ffi.Int)
>()
external void cw_window_set_shadow_width(
  ffi.Pointer<ffi.Void> gtk_window,
  int top,
  int left,
  int bottom,
  int right,
);

enum cw_window_edge_t {
  CW_WINDOW_EDGE_NORTH_WEST(0),
  CW_WINDOW_EDGE_NORTH(1),
  CW_WINDOW_EDGE_NORTH_EAST(2),
  CW_WINDOW_EDGE_WEST(3),
  CW_WINDOW_EDGE_EAST(4),
  CW_WINDOW_EDGE_SOUTH_WEST(5),
  CW_WINDOW_EDGE_SOUTH(6),
  CW_WINDOW_EDGE_SOUTH_EAST(7);

  final int value;
  const cw_window_edge_t(this.value);

  static cw_window_edge_t fromValue(int value) => switch (value) {
    0 => CW_WINDOW_EDGE_NORTH_WEST,
    1 => CW_WINDOW_EDGE_NORTH,
    2 => CW_WINDOW_EDGE_NORTH_EAST,
    3 => CW_WINDOW_EDGE_WEST,
    4 => CW_WINDOW_EDGE_EAST,
    5 => CW_WINDOW_EDGE_SOUTH_WEST,
    6 => CW_WINDOW_EDGE_SOUTH,
    7 => CW_WINDOW_EDGE_SOUTH_EAST,
    _ => throw ArgumentError('Unknown value for cw_window_edge_t: $value'),
  };
}
